<resources>
    <string name="app_name">LendaHand</string>
    <string name="lh_volunteer_signup_description">This information will be sent to the service organization you’re volunteering with. This basic info is all you need for most service opportunitties.</string>
    <string name="lh_hint_first_name">First Name</string>
    <string name="lh_hint_last_name">Last Name</string>
    <string name="lh_hint_email">Email</string>
    <string name="lh_hint_phone">Phone</string>
    <string name="lh_hint_date_of_birth">Date of Birth</string>
    <string name="lh_hint_password">Password</string>
    <string name="lh_button_start_serving">Start Serving</string>
    <string name="lh_header_basic_contact_info">Basic Contact Info</string>
    <string name="SampleText">Name</string>
    <string name="btnSignupButton">Sign Up</string>
    <string name="ServiceOpImage">ServiceOpImage</string>
    <string name="lh_sign_up">Sign Up</string>
    <string name="lh_create_service_org">Create Service Org</string>
    <string name="lh_create_service_opportunity">Create Service Opportunity</string>
    <string name="volunteers_will_see_this_information_for_all_the_service_opportunities_you_add_to_lend_a_hand">Volunteers will see this information for all the service opportunities you add to Lend a Hand.</string>
    <string name="organization_name">Organization Name *</string>
    <string name="organization_email">Organization Email *</string>
    <string name="organization_website">Organization Website</string>
    <string name="next">Next</string>
    <string name="organization_phone">Organization Phone *</string>
    <string name="your_password_is_not_seen_by_volunteers">YOUR PASSWORD IS NOT SEEN BY VOLUNTEERS</string>
    <string name="password">Password *</string>
    <string name="top_toolbar_volunteer_sign_up">Volunteer Sign Up</string>
    <string name="top_toolbar_organization_sign_up">Organization Sign Up</string>
    <string name="top_toolbar_create_service_op">Create Service Op</string>
    <string name="volunteer_signup_disclaimer">YOUR PASSWORD IS NOT SENT TO SERVICE ORGS</string>
    <string name="lh_volunteer_tags_header">What are you interested in?</string>
    <string name="lh_volunteer_tags_description">Talior your discover feed to  your interests and help us match you with Service Organizaions. Tap categories you are interetested in serving.</string>
    <string name="skip">Skip</string>
    <string name="edit_volunteer">Edit Volunteer</string>
    <string name="lh_search_service_opportunity">Search</string>
    <string name="image_for_the_service_op">image for the service op</string>

    <string-array name="featured_service_ops_titles">
        <item>Build Day</item>
        <item>Pancake Day</item>
        <item>Meals on Wheels</item>
    </string-array>

    <string-array name="featured_service_ops_subtitles">
        <item>Invest in a familys future</item>
        <item>A sweet treat for everyone</item>
        <item>Food for all</item>
    </string-array>
</resources>
