<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Volunteer_Signup">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/LendaHand_Top_Bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/top_toolbar_volunteer_sign_up"
            />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TableRow
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity=""
            android:layout_marginTop="29dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/page_icon_placeholder"
                tools:srcCompat="@mipmap/page_icon_placeholder" />

            <TextView
                android:layout_width="138dp"
                android:layout_height="52dp"
                android:layout_marginTop="11dp"
                android:layout_marginLeft="10dp"
                android:text="@string/lh_header_basic_contact_info"
                android:layout_marginBottom="19dp"
                android:textSize="22sp" />
        </TableRow>

        <TextView
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/lh_volunteer_signup_description"
            android:layout_marginBottom="11dp"
            android:textSize="12sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:hint="@string/lh_hint_first_name"
            style="@style/LendaHand_Text_Box">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunteerFirstNameText"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:hint="@string/lh_hint_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunteerLastNameText"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:hint="@string/lh_hint_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunteerEmailText"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:hint="@string/lh_hint_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunteerPhoneText"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/lh_hint_date_of_birth"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunteerDateOfBirthText"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/orgPasswordNote"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="32dp"
            android:maxLines="1"
            android:text="@string/volunteer_signup_disclaimer"
            android:textAlignment="center"
            android:textSize="12sp" />
        <View
            android:id="@+id/passwordDividerVolunteer"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:layout_margin="7dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="21dp"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="25dp"
            android:hint="@string/lh_hint_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/volunteerPasswordText"
                android:layout_width="259dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_serving_button"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:text="@string/lh_button_start_serving"/>

    </LinearLayout>
</FrameLayout>