<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTagsForVolunteer">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/app_bar"
            style="@style/LendaHand_Top_Bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/top_toolbar_volunteer_sign_up"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?attr/actionBarSize"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="29dp"
            app:srcCompat="@mipmap/page_icon_placeholder"
            tools:srcCompat="@mipmap/page_icon_placeholder" />

        <TextView
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/lh_volunteer_tags_header"
            android:layout_marginBottom="8dp"
            android:textSize="22sp" />

        <TextView
            android:layout_width="259dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:text="@string/lh_volunteer_tags_description"
            android:layout_marginBottom="16dp"
            android:textSize="12sp" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/tags_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="29dp"
            android:layout_marginRight="29dp">
        </com.google.android.material.chip.ChipGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_serving_button"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:text="@string/lh_button_start_serving"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/volunteer_skip"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            style="@style/LendaHand_Secondary_Button"
            android:text="@string/skip"/>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>