<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".org_signup1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/page_icon_placeholder"
                tools:srcCompat="@mipmap/page_icon_placeholder" />

            <TextView
                android:layout_width="138dp"
                android:layout_height="52dp"
                android:layout_marginLeft="10dp"
                android:text="@string/lh_header_basic_contact_info"
                android:layout_marginBottom="19dp"
                android:textSize="22sp" />
        </TableRow>

        <TextView
            android:id="@+id/orgBasicInfoInstructions"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="11dp"
            android:textSize="12sp"
            android:text="@string/volunteers_will_see_this_information_for_all_the_service_opportunities_you_add_to_lend_a_hand"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgNameLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:hint="@string/organization_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/orgEmailLabel"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Email *"
            android:textColor="@color/color_primary_variant"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgEmailLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:hint="@string/organization_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/orgPhoneLabel"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Phone *"
            android:textColor="@color/color_primary_variant" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgPhoneLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:hint="@string/organization_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgPhoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/orgWebsiteLabel"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Website"
            android:textColor="@color/color_primary_variant" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgWebsiteLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:hint="@string/organization_website"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgWebsiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/orgPasswordNote"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="19dp"
            android:maxLines="1"
            android:text="@string/your_password_is_not_seen_by_volunteers"
            android:textAlignment="center"
            android:textSize="12sp" />
        <View
            android:id="@+id/divider"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray" />
        <TextView
            android:id="@+id/orgPasswordLabel"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Password *"
            android:textColor="@color/color_primary_variant" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgPasswordLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@mipmap/progress_1_of_3"
            tools:srcCompat="@mipmap/progress_1_of_3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/orgSignupNext1"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/next"
            android:textAllCaps="false"/>
    </LinearLayout>
</ScrollView>
