<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".org_page_edit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/app_bar"
                style="@style/LendaHand_Top_Bar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="EDIT PAGE"/>
        </com.google.android.material.appbar.AppBarLayout>

        <TableRow
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@mipmap/page_icon_placeholder"
                tools:srcCompat="@mipmap/page_icon_placeholder" />

            <TextView
                android:layout_width="138dp"
                android:layout_height="52dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="11dp"
                android:text="EDIT PAGE"
                android:layout_marginBottom="19dp"
                android:textSize="22sp" />
        </TableRow>


        <TextView
            android:id="@+id/orgBasicInfoInstructions"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="11dp"
            android:textSize="12sp"
            android:text="@string/volunteers_will_see_this_information_for_all_the_service_opportunities_you_add_to_lend_a_hand"
            android:textAlignment="center" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgNameLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:hint="@string/organization_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgNameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgEmailLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:hint="@string/organization_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgEmailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgPhoneLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="12dp"
            android:hint="@string/organization_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgPhoneText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgWebsiteLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:hint="@string/organization_website"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgWebsiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgDescLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="Organization Description *"
            android:layout_margin="4dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgDescText"
                android:layout_width="match_parent"
                android:layout_height="159dp"
                android:gravity="top"
                android:inputType="textImeMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                app:srcCompat="@mipmap/mini_organization_screen_with_lines"
                tools:srcCompat="@mipmap/mini_organization_screen_with_lines"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload Your Logo *"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/orgLogo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:scaleType="fitXY"
                    android:background="@color/color_secondary" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Upload Your Header *"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/orgHeader"
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:background="@color/color_secondary_variant" />
            </LinearLayout>
        </TableRow>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrgChangeLogo"
            android:layout_width="233dp"
            android:layout_height="37dp"
            android:layout_gravity="center_horizontal"
            android:text="Change Logo"
            android:textAllCaps="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnOrgChangeHeader"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Change Header"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/orgPasswordNote"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginTop="19dp"
            android:maxLines="1"
            android:text="@string/your_password_is_not_seen_by_volunteers"
            android:textAlignment="center"
            android:textSize="12sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/darker_gray" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/orgPasswordLayout"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="4dp"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/orgPasswordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:maxLines="1"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/orgSavePage"
            android:layout_width="233dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Save"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>
